feat: add status field to OrderRequest and OrderResponse, update OrderMapper and OrderService to handle new fields